--- a/index.html
+++ b/index.html
@@ -39,14 +39,122 @@
         </nav>
     </header>
     <main>
-        
+        <div class="container">
+            <ul class="slider">
+                <li id="slide1">
+                    <img src="Recursos/93A1109a.jpg">
+                </li>
+                <li id="slide2">
+                    <img src="Recursos/1200px-Cafayatemountains.jpg">
+                </li>
+                <li id="slide3">
+                    <img src="Recursos/93A1514-a.jpg">
+                </li>
+                <li id="slide4">
+                    <img src="Recursos/93A1531-Bearbeitet.jpg">
+                </li>
+                <li id="slide5">
+                    <img src="Recursos/93A2023-Bearbeitet.jpg">
+                </li>
+                <li id="slide6">
+                    <img src="Recursos/93A2063-Bearbeitet.jpg">
+                </li>
+                <li id="slide7">
+                    <img src="Recursos/93A2116-Bearbeitet.jpg">
+                </li>
+                <li id="slide8">
+                    <img src="Recursos/93A2128-Bearbeitet.jpg">
+                </li>
+                <li id="slide9">
+                    <img src="Recursos/93A2595-Bearbeitet.jpg">
+                </li>
+                <li id="slide10">
+                    <img src="Recursos/93A3418-Bearbeitet.jpg">
+                </li>
+                <li id="slide11">
+                    <img src="Recursos/93A3461-Bearbeitet.jpg">
+                </li>
+                <li id="slide12">
+                    <img src="Recursos/93A3469-Bearbeitet.jpg">
+                </li>
+                <li id="slide13">
+                    <img src="Recursos/93A7780-Bearbeitet.jpg">
+                </li>
+                <li id="slide14">
+                    <img src="Recursos/IMG_3069-Bearbeitet.jpg">
+                </li>
+                <li id="slide15">
+                    <img src="Recursos/Quebrada-de-Humahuaca.jpg">
+                </li>
+                <li id="slide16">
+                    <img src="Recursos//Vinos.png">
+                </li>
+            </ul>
+            <ul class="menu">
+                <li>
+                    <a href="#slide1">1</a>
+                </li>
+                <li>
+                    <a href="#slide2">2</a>
+                </li>
+                <li>
+                    <a href="#slide3">3</a>
+                </li>
+                <li>
+                    <a href="#slide4">4</a>
+                </li>
+                <li>
+                    <a href="#slide5">5</a>
+                </li>
+                <li>
+                    <a href="#slide6">6</a>
+                </li>
+                <li>
+                    <a href="#slide7">7</a>
+                </li>
+                <li>
+                    <a href="#slide8">8</a>
+                </li>
+                <li>
+                    <a href="#slide9">9</a>
+                </li>
+                <li>
+                    <a href="#slide10">10</a>
+                </li>
+                <li>
+                    <a href="#slide11">11</a>
+                </li>
+                <li>
+                    <a href="#slide12">12</a>
+                </li>
+                <li>
+                    <a href="#slide13">13</a>
+                </li>
+                <li>
+                    <a href="#slide14">14</a>
+                </li>
+                <li>
+                    <a href="#slide15">15</a>
+                </li>
+                <li>
+                    <a href="#slide16">16</a>
+                </li>
+            </ul>
+        </div>
         <section id="home">
             <h1>Inicio</h1>
+            <span>HAZ HISTORIA
+                CON NOSOTROS</span>
+            <p>Se parte de la primera Expo Vitivinícola De Altura dedicada a la viticultura y la tecnología que se celebrará del 16 al 18 de noviembre de 2022.Conoce las mejores herramientas y tecnologías, productos y técnicas para la viticultura como para el tratamiento de la uva y la vinificación.</p>
+            <p>Nuestro objetivo es ser un punto de referencia para la cadena de suministro del vino tanto a nivel nacional como internacional, buscando una sinergia entre distintos productores y comerciantes de la viticultura.</p>        
+            <p>Nuestra meta será guiar e inspirar a los participantes creando ideas para el debate y el intercambio con el fin de ofrecer una contribución significativa a la evolución del sector.</p>        
+            <p>Participando juntos lograremos la creación de nuevas oportunidades para negocios crecimientos  a través de la profundización de la investigación, contribuyendo así con la evolución en el sector.</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/N09zv4rXev0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         
         <section id="us">
             <h1>Quienes Somos</h1>
+            <p>Nos dedicamos a compartir conocimiento sobre todo lo relacionado con la elaboración del vino, ofreciendo conferencias y exposiciones impartidas por expertos en el tema vinícola.</p>
         </section>
 
         <section id="evento">
