--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             <input type="tel" /><br /><br />
                         </fieldset><br />
 
-                        <fieldset>
+<!--                         <fieldset>
                             <legend>Charlas disponibles</legend>
                             <input type="checkbox" id="charla1">
                             <label for="">Acepto las politicas de inscripcion</label><br>
@@ -233,7 +233,7 @@
                             <label for="">Acepto las politicas de inscripcion</label><br>
                             <input type="checkbox" id="charla5">
                             <label for="">Acepto las politicas de inscripcion</label><br>
-                        </fieldset><br>
+                        </fieldset><br> -->
 
                         <label for="textarea">Dejanos Tus Comentarios</label><br><br> 
                         <textarea name="textarea" rows="5" cols="30" id="textarea">
@@ -254,10 +254,10 @@
         <section>
             <h1>Como llegar</h1>
             <iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d3639.6712550161415!2d-65.33229196474424!3d-24.183246325717864!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x941b0ee2033f07f3%3A0xc77a811c6a4b0561!2sCiudad%20Cultural%2C%20San%20Salvador%20de%20Jujuy%2C%20Jujuy!3m2!1d-24.1834177!2d-65.3312979!5e0!3m2!1ses-419!2sar!4v1661390046479!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </section>
-        <section>
+<!--         <section>
             <aside>
             </aside>
-        </section>
+        </section> -->
     </main>
     <footer>
         <section id="contacto">
