--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         id="escudoblanco"
         />
     </figure>
-    <title>Evento Vitivinícola</title>
+    <title>EXPO VITIVINICOLA DE ALTURA</title>
 </head>
 <body>
     <header>
@@ -141,7 +141,7 @@
             <br />
             <section id="home">
                 <br />
-                <h1>PRIMERA EXPO VITIVINICOLA DE ALTURA</h1>
+                <h1>PRIMERA EXPO VITIVINICOLA DE ALTURA 2022</h1>
                 <br />
                 <span>HAZ HISTORIA CON NOSOTROS</span>
                 <br /><br />
@@ -186,7 +186,7 @@
                 impartidas por expertos en el tema vinícola.
             </p>
             </section>
-    </header>
+    </header><br>
     <main>
         <section id="evento">
             <h1>Sobre El Evento</h1>
@@ -203,25 +203,25 @@
             <h1>REGISTRO</h1>
             <br />
             <div>
-                <form action="script.php" id="formulario">
-                    <h2>Complete el formulario para asistir al evento</h2>
+                <form action="script.php" id='formulario'>
+                    <!-- <h2>Complete el formulario para asistir al evento</h2> -->
 
                     <fieldset>
-                        <legend>Registro</legend><br>
+                        <!-- <legend>Registro</legend><br> -->
                         <fieldset>
-                            <legend>Datos de Participante</legend>
+                            <legend>Datos Personales</legend>
                             <br /><br />
-                            <label for="">Tenes Usuario Activo?</label>
-                            <input type="checkbox" /><br /><br />
-                            <label for="">Nombre y Apelllido</label>
-                            <input type="text" /><br /><br />
-                            <label for="">DNI</label>
-                            <input type="number" /><br /><br />
-                            <label for="">Telefono</label>
-                            <input type="tel" /><br /><br />
+                            <!-- <label for="">Tenes Usuario Activo?</label>
+                            <input type="checkbox" /><br /><br /> -->
+                            <label for="name">Nombre y Apelllido</label>
+                            <input type="text" id="name"><br><br>
+                            <label for="dni">DNI</label>
+                            <input type="number" id="dni"><br><br>
+                            <label for="tel">Telefono</label>
+                            <input type="tel" id="tel"><br><br>
                         </fieldset><br />
 
-<!--                         <fieldset>
+                        <!--<fieldset>
                             <legend>Charlas disponibles</legend>
                             <input type="checkbox" id="charla1">
                             <label for="">Acepto las politicas de inscripcion</label><br>
@@ -239,8 +239,8 @@
                         <textarea name="textarea" rows="5" cols="30" id="textarea">
                         </textarea><br><br>
                         
-                        <label for="">Acepto las <a href="">Politicas</a> de inscripcion</label>
-                        <input type="checkbox" id="politic"><br><br>
+                        <!-- <label for="">Acepto las <a href="">Politicas</a> de inscripcion</label>
+                        <input type="checkbox" id="politic"><br><br> -->
                         <button type="button" id="enviar">Enviar</button>
 
                     </fieldset>
@@ -249,7 +249,7 @@
         </section><br>
         <section id="clima">
             <h1>Clima</h1>
-            <p>Asi esta el tiempo en el lugar del evento ciudad cultural</p>4
+            <p>Asi esta el tiempo en el lugar del evento ciudad cultural</p>
         </section><br>
         <section>
             <h1>Como llegar</h1>
