--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="font.css"/>
     <link rel="shortcut icon" href="./Recursos/favicon.ico"/>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <figure>
@@ -19,6 +20,11 @@
     <title>EXPO VITIVINICOLA DE ALTURA</title>
 </head>
 <body>
+    <div class="social-bar">
+        <a href="https://wa.me/5493886070595?text=Hola,%20tengo%20una%20consulta%20por%20la%20expo%20de%20Vitivinicultura%20de%20Altura." class="icon icon-whatsapp" target="_blank"></a>
+        <a href="https://www.facebook.com/juan.m.aparicio" class="icon icon-facebook" target="_blank"></a>
+        <a href="https://www.instagram.com/juanm_aparicio/" class="icon icon-instagram" target="_blank"></a>
+    </div>
     <header>
             <nav id="navbar" class="navbar">
                 <div class="navbar">
@@ -250,6 +256,7 @@
         <section id="clima">
             <h1>Clima</h1>
             <p>Asi esta el tiempo en el lugar del evento ciudad cultural</p>
+            <div id="clima"></div>
         </section><br>
         <section>
             <h1>Como llegar</h1>
