--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <div class="social-bar">
         <a href="https://wa.me/5493886070595?text=Hola,%20tengo%20una%20consulta%20por%20la%20expo%20de%20Vitivinicultura%20de%20Altura." class="icon icon-whatsapp" target="_blank"></a>
-        <a href="https://www.facebook.com/juan.m.aparicio" class="icon icon-facebook" target="_blank"></a>
+        <a href="https://www.instagram.com/guillej_k/" class="icon icon-instagram" target="_blank"></a>
         <a href="https://www.instagram.com/juanm_aparicio/" class="icon icon-instagram" target="_blank"></a>
     </div>
     <header>
